navbar and intro section added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/userAsset/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="wrapper">
+
         <div class="container">
+
             <div class="navbar">
                 <div class="logo-container">
                     <img src="./images/userAsset/Letter.jpeg" class="logo">
@@ -23,8 +26,90 @@
 
             </div>
 
-            
+            <div class="hero-section">
+                <div class="absolute faded-text">Manan Mehra</div>
+                <div class="hero-section-left">
+                    <div class="hero-section-heading">Hi!! Manan Mehra this side!!</div>
+                    <div class="hero-section-heading hero-section-sub-heading">
+                        I am a <span class="role"></span>
+                    </div>
+                    <div class="hero-section-descriptio">
+                        I am a Pre-Final Year student at Thapar Institute of Engineering and Technology pursuing Computer Engineering. 
+                        I have a keen interest in Web Development and learning new technologies. I thrive in the dynamic dance of teamwork and self-drive, gracefully gliding through pressure and deadlines with ease.
+                    </div>
+
+                    <div class="btn-pink" id="btn">Hire Me</div>
+                </div>
+                <div class="hero-section-right">
+                    <div class="absolute icons icon-dots">
+                        <img src="./images/userAsset/dots.png" alt="" />
+                      </div>
+                      <div class="absolute icons icon-cube">
+                        <img src="./images/userAsset/cube.png" alt="" />
+                      </div>
+                      <div class="absolute icons icon-circle">
+                        <img src="./images/userAsset/circle.png" alt="" />
+                      </div>
+                      <div class="absolute icons icon-zigzag">
+                        <img src="./images/userAsset/zigzags.png" alt="" />
+                      </div>
+                      <div class="absolute icons icon-plus">
+                        <img src="./images/userAsset/plus.png" alt="" />
+                      </div>
+                      <div class="user-image">
+                        <img src="./images/userAsset/IMG_2130.jpg" width="350px" height="400px" alt="" />
+                      </div>
+                </div>
+            </div>
         </div>
+
+        <div class="project-section">
+            <h2 class="project-heading">Projects</h2>
+            <div class="project-container">
+                <div class="project-card" id="project1">
+                    <div class="project-number">01</div>
+                    <div class="project-content">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Bootstrap.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                        </div>
+                        <h2 class="project-heading">YANAGRAHA</h2>
+                        <div class="project-subheading">The project is a user-friendly parking platform that helps people find nearby parking areas, 
+                            check slot availability, and pre-book parking spaces for a hassle-free experience. It also facilitates parking space owners 
+                            to register their spots and collaborate with individuals offering personalized parking services.</div>
+                        <div class="btn-grp">
+                            <button class="btn-pink btn-project">Read More</button>
+                            <a href="https://github.com/Manan2810/YANAGRHA">
+                            <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                            <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+    <script>
+        var typeData = new Typed(".role", {
+          strings: [
+            "Computer Engineering Student",
+            "Full Stack Developer",
+            "Coder"
+          ],
+          loop: true,
+          typeSpeed: 100,
+          backSpeed: 80,
+          backDelay: 1000,
+        });
+    </script>
 </body>
 </html>
