my portfolio added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         I have a keen interest in Web Development and learning new technologies. I thrive in the dynamic dance of teamwork and self-drive, gracefully gliding through pressure and deadlines with ease.
                     </div>
 
-                    <div class="btn-pink" id="btn">Hire Me</div>
+                    <div class="btn-pink" id="btn">Download Resume</div>
                 </div>
                 <div class="hero-section-right">
                     <div class="absolute icons icon-dots">
@@ -63,12 +63,12 @@
             </div>
         </div>
 
-        <div class="project-section">
-            <h2 class="project-heading">Projects</h2>
+        <div id="projects" class="project-section">
+            <h2 class="project-header">Projects</h2>
             <div class="project-container">
                 <div class="project-card" id="project1">
-                    <div class="project-number">01</div>
-                    <div class="project-content">
+                    <div class="project-number project-number-right">01</div>
+                    <div class="project-content project-content-left">
                         <div class="project-skills-container">
                             <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                             <img class="project-skill" src="./images/stack/CSS.png" alt="" />
@@ -91,8 +91,113 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card" id="project2">
+                    <div class="project-number project-number-right">02</div>
+                    <div class="project-content project-content-left">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Bootstrap.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/figma.png" alt="" />
+                        </div>
+                        <h2 class="project-heading">AYUDAR</h2>
+                        <div class="project-subheading">Our platform brings together trustworthy environmental NGOs and passionate 
+                            individuals to support environmental causes. NGOs showcase their work, attract volunteers, and earn
+                            points for reducing carbon emissions, which can be used to generate funds from our funders and investors. 
+                            Together, we create a community of environmentally conscious people making a positive impact on our 
+                            planet.</div>
+                        <div class="btn-grp">
+                            <button class="btn-pink btn-project">Read More</button>
+                            <a href="https://github.com/Manan2810/Ayudar_Hackeclipse">
+                            <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                            <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div id="skills" class="skills-container container">
+            <div class="absolute skills-faded-text">Skills</div>
+            <div class="skill-heading">
+                <span class="caps">M</span>y Tech Stack
+            </div>
+
+            <div class="skill-images">
+                <img src="./images/userAsset/blob vector.png" class="blob-style" alt="" />
+                <img class="skill-style" src="./images/stack/HTML.png" alt="" />
+                <img class="skill-style" src="./images/stack/CSS.png" alt="" />
+                <img class="skill-style" src="./images/stack/Bootstrap.svg" alt="" />
+                <img class="skill-style" src="./images/stack/Express.png" alt="" />
+                <img class="skill-style" src="./images/stack/figma.png" alt="" />
+                <img class="skill-style" src="./images/stack/Git.svg" alt="" />
+                <img class="skill-style" src="./images/stack/Github.svg" alt="" />
+                <img class="skill-style" src="./images/stack/Javascript.svg" alt="" />
+                <img class="skill-style" src="./images/stack/MongoDB.svg" alt="" />
+                <img class="skill-style" src="./images/stack/NodeJs.svg" alt="" />
+                <img class="skill-style" src="./images/stack/Tailwind.png" alt="" />
+                <img class="skill-style" src="./images/stack/C.png" alt="" />
+                <img class="skill-style" src="./images/stack/cpp.png" alt="" />
+                <img class="skill-style" src="./images/stack/python.png" alt="" />
+                <img class="skill-style" src="./images/stack/postman.svg" alt="" />    
+                <img class="skill-style" src="./images/stack/pandas.png" alt="" />        
+            </div>
+
+
+        </div>
+
+        <div class="contactus-form-container" id="contactme">
+            <div class="container">
+                <h1 class="contactus-heading">Contact Me</h1>
+                <h3 class="contactus-sub-heading">Questions,thoughts,or just want to say hello?</h3>
+                <div class="contactus-form">
+                    <form class="form" action="">
+                        <div class="formfield-container">
+                            <input class="formfield" type="text" name="name" id="" placeholder="Enter your name">
+                            <input class="formfield" type="email" name="email" id="" placeholder="Enter your email address">
+                            <input class="formfield" type="text" name="subject" id="" placeholder="Enter your subject">
+                            <textarea name="message" id="" cols="30" rows="10" class="formfield formfield-textarea" placeholder="Enter your message"></textarea>
+
+                        </div>
+                        <div> <button type="submit" class="btn-pink" id="submit-btn">Submit message <i class="submit-icon fa-solid fa-paper-plane"></i></button></div>
+                    </form>
+                </div>
+                
+            </div>
+        </div>
+
+        <footer>
+            <div class="container">
+              <div class="footer-wrapper">
+                <div class="footer-faded-text">Manan Mehra</div>
+  
+                <div class="link-wrapper">
+                  <div>
+                    <a href="#projects">Projects</a>
+                  </div>
+                  <div>
+                    <a href="#skills">Skills</a>
+                  </div>
+                  <div>
+                    <a href="#contactme">Contact Me</a>
+                  </div>
+                </div>
+  
+                <div class="icon-wrapper">
+                  <a href="https://www.linkedin.com/in/manan-mehra-2755a6205/"><i class="fa-brands fa-linkedin icon"></i></a> 
+                  <a href="https://github.com/Manan2810"><i class="fa-brands fa-github icon"></i></a> 
+                  <a href="https://twitter.com/MananMehra2810"><i class="fa-brands fa-twitter icon"></i></a> 
+                  <a href="mananmehra330@gmail.com"><i class="fa-regular fa-envelope icon"></i></a> 
+                </div>
+  
+              </div>
+            </div>
+          </footer>
 
     </div>
 
@@ -111,5 +216,6 @@
           backDelay: 1000,
         });
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
