--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
                     </div>
-                    <div class="hero-section-descriptio">
+                    <div class="hero-section-description">
                         I am a Pre-Final Year student at Thapar Institute of Engineering and Technology pursuing Computer Engineering. 
                         I have a keen interest in Web Development and learning new technologies. I thrive in the dynamic dance of teamwork and self-drive, gracefully gliding through pressure and deadlines with ease.
                     </div>
@@ -57,7 +57,7 @@
                         <img src="./images/userAsset/plus.png" alt="" />
                       </div>
                       <div class="user-image">
-                        <img src="./images/userAsset/IMG_2130.jpg" width="350px" height="400px" alt="" />
+                        <img src="./images/userAsset/MYPIC.jpg" width="350px" height="400px" alt="" />
                       </div>
                 </div>
             </div>
