one more project added

--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card" id="project3">
+                    <div class="project-number project-number-right">03</div>
+                    <div class="project-content project-content-left">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/python.png" alt="" />
+                            <img class="project-skill" src="./images/stack/nltk.png" alt="" />
+                            <img class="project-skill" src="./images/stack/tkinter.png" alt="" />
+                        </div>
+                        <h2 class="project-heading">AI Based Text Classification</h2>
+                        <div class="project-subheading">The AI-based text classification project aims to develop a sophisticated 
+                            machine learning model that can automatically classify text documents into predefined categories or topics. 
+                            The project utilizes Natural Language Processing (NLP) techniques, specifically text classification algorithms, 
+                            to enable efficient and accurate categorization of large volumes of unstructured text data.
+                        </div>
+                        <div class="btn-grp">
+                            <button class="btn-pink btn-project">Read More</button>
+                            <a href="https://github.com/Manan2810/AI_Based_Text_Classification">
+                            <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                            <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
